[package]
name = "forest"
version = "0.1.0"
edition = "2021"
resolver = "2"

# Dependencies for all targets go here.
[dependencies]
bevy = { version="0.5" }#, features = ["dynamic"] }
bevy_egui = "0.7"
bevy-shadows = { git = "https://github.com/slyedoc/bevy-shadows" } # not published
bevy_dolly = { git = "https://github.com/slyedoc/bevy_dolly", branch = "bevy-native" } # not published
bevy-inspector-egui = "0.6"
bevy_transform_gizmo = { git = "https://github.com/slyedoc/bevy_transform_gizmo", branch = "bevy-main" } # not published
bevy_mod_raycast = "0.2"
bevy_mod_bounding = "0.1"
bevy_mod_picking = "0.4"
bevy_skybox = "0.5.0"
ron = "0.6"
serde = "1.0"
rand = "0.8"

#not using
noise = "0.7"
expression = "0.3"
expression-num = "0.2"
#derive_more = "0.99"

[dev-dependencies]
expression-num = "0.2"

[features]
default = ["editor"]
editor = []

[patch.crates-io]
# Github versions
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" } # main
bevy_mod_raycast = { git = "https://github.com/slyedoc/bevy_mod_raycast" }
bevy_mod_bounding = { git = "https://github.com/slyedoc/bevy_mod_bounding" }
bevy_mod_picking = { git = "https://github.com/slyedoc/bevy_mod_picking" }
bevy_egui = { git = "https://github.com/slyedoc/bevy_egui", branch = "bevy-main" }
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui/", branch="bevy-main" }

# Local versions
[patch."https://github.com/slyedoc/bevy_dolly"]
bevy_dolly = { path = "../bevy_dolly" }
#[patch."https://github.com/slyedoc/bevy_mod_bounding"]
#bevy_mod_bounding = { path = "../bevy_mod_bounding" }


#bevy = "bevy"
#bevy_mod_raycast = { path = "../bevy_mod_raycast" }
#bevy_mod_picking = { path = "../bevy_mod_picking" }
#bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main" }
#bevy-inspector-egui = { path = "../bevy-inspector-egui" }
#bevy_prototype_debug_lines = { path = "../bevy_debug_lines" }
#bevy_rapier2d = { path = "bevy_rapier/bevy_rapier2d", default-features = false, features = [ "dim2", "f32" ]  }
#bevy_rapier3d = { path = "bevy_rapier/bevy_rapier3d" }
