[package]
name = "forest"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies for all targets go here.
[dependencies]
bevy = { version =  "0.5" }
bevy_egui = "0.7"
bevy-inspector-egui = "0.6"
heron = { version = "0.12", features = ["debug-3d"] }
ron = "0.7"
serde = "1.0"
rand = "0.8"
strum = "0.22"
strum_macros = "0.22"
bevy_dolly = { path = "../bevy_dolly" }
bevy_mod_bounding = "0.1.1"
#not using except for curve generation
expression = "0.3"
expression-num = "0.2"
noise = "0.7"
#derive_more = "0.99"
#bevy_transform_gizmo = { git = "https://github.com/slyedoc/bevy_transform_gizmo", branch = "bevy-main" } # not published
[dev-dependencies]
expression-num = "0.2"

[features]
default = ["editor"]
editor = []

[profile.dev."*"]
opt-level = 3

[patch.crates-io]
heron = { path = "../heron" }
#heron = { git = "https://github.com/jrxb/heron" }
bevy = { path = "../bevy" }
#bevy = { git = "https://github.com/deontologician/bevy/", branch = "deps-hack" } # main
bevy_egui = { git = "https://github.com/slyedoc/bevy_egui", branch = "bevy-main"}
bevy_mod_raycast = { git = "https://github.com/slyedoc/bevy_mod_raycast" }
#bevy_mod_raycast = { path = "../bevy_mod_raycast" }
bevy_mod_bounding = { git = "https://github.com/slyedoc/bevy_mod_bounding" }
#bevy_mod_bounding = { path = "../bevy_mod_bounding" }
bevy_mod_picking = { git = "https://github.com/slyedoc/bevy_mod_picking" }
#bevy_mod_picking = { path = "../bevy_mod_picking" }
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui/", branch="bevy-main" }
